Z-index issue - fixed

--- a/assets/css/clicktodial.css
+++ b/assets/css/clicktodial.css
@@ -12,6 +12,8 @@
     font-size: 12px;
     border-radius: 5px;
     box-shadow: rgba(0,0,0,0.25) 0 0 0 2038px, rgba(0,0,0,0.25) 0 10px 20px;
+
+    z-index: 2147483647;
 }
 .voipgrid-status h2 {
     margin: 0;
